# phishing-benchmark

./: .gitattributes  README.md  analyze_results.py  benchmark_results.json  logistic_regression.ipynb  pyproject.toml  requirements.txt  run_benchmark.py  tfidf_svm_PhiUSIIL.ipynb  xgboost_PhiUSIIL.ipynb
Modells/: cnn_with_PhiUSIIL.ipynb  logistic_regression_PhiUSIIL.ipynb
conf/: config.yaml
conf/dataset/: features.yaml  phiusiil.yaml  url_raw.yaml
conf/model/: cnn.yaml  lr.yaml  svm.yaml  xgb.yaml
data/: analyze_urls.py
data/processed/: feature_all.csv  feature_all.txt
notebooks/: analyse.ipynb  main_experiment_runner.ipynb
results/: analyse.ipynb  benchmark_results.json  benchmark_summary.csv  cnn_model_seed1337.safetensors  cnn_model_seed2024.safetensors  cnn_model_seed42.safetensors  final_benchmark_results.csv
results/models/: cnn_PhiUSIIL_1337.bin.safetensors  cnn_PhiUSIIL_2024.bin.safetensors  cnn_PhiUSIIL_42.bin.safetensors  cnn_raw_urls_1337.bin.safetensors  cnn_raw_urls_2024.bin.safetensors  cnn_raw_urls_42.bin.safetensors
results/old/: benchmark_results.json
src/: adapters.py  benchmark.py  benchmark_results.json  cnn.ipynb  cnn_with_PhiUSIIL.ipynb  data_loader.py  engine.py  factories.py  interfaces.py  logger.py  logistic_regression.ipynb  logistic_regression_PhiUSIIL.ipynb  main_experiment_runner.ipynb  models.py  tfidf_svm.ipynb  tfidf_svm_PhiUSIIL.ipynb  train.py  utils.py  visualize.py  xgboost.ipynb  xgboost_PhiUSIIL.ipynb
src/phishing_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
