[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-benchmark"
version = "0.1.0"
description = "Phishing Detection Benchmark"
readme = "README.md"
requires-python = ">=3.11, <3.12"
authors = [
  { name = "Benedikt Lang", email = "22labe1bif@hft-stuttgart.de" },
]

dependencies = [
    # Core Data Science
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    
    # Machine Learning / Deep Learning
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "xgboost>=3.1.3",
    
    # Visualization
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    
    # System & Hardware Monitoring (Wichtig für benchmark.py)
    "psutil>=7.2.1",
    "nvidia-ml-py>=13.590.44",  # Ersetzt oft pynvml, enthält aber die Bindings   
    
    # Utilities
    "requests>=2.32.5",
    "PyYAML>=6.0.3",
    
    # Audit Requirements (Sicherheit & Code Quality)
    "safetensors>=0.4.0",       # 
    "ruff>=0.1.0"    
    
    # ... deine existierenden Pakete ...
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",          
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]